--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
         "vite": "^5.0.0"
     },
     "dependencies": {
-        "@heroicons/react": "^2.2.0"
+        "@heroicons/react": "^2.2.0",
+        "framer-motion": "^12.23.24",
+        "lucide-react": "^0.546.0"
     }
 }
